--- a/form.html
+++ b/form.html
@@ -1,113 +1,118 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="container">
-      <header class="header">
-        <h1 class="center">freeCodeCamp Survey Form</h1>
-        <p> Thank you for taking the time to help us improve the platform </p>
-      </header>
-      <form>
-        <div>
-          <label>Name</label>
-          <input/>
-        </div>
-        <div>
-          <label>Email</label>
-          <input/>
-        </div>
-        <div>
-          <label>Age</label>
-          <input/>
-        </div>
-        <div class="form-group">
-          <p>Which option best describes your current role?</p>
-          <select>
-            <option>Select current role</option>
-            <option>Student</option>
-            <option>Full Time Job</option>
-            <option>Full Time Learner</option>
-            <option>Prefer not to say</option>
-            <option>Other</option>
-          </select>
-        </div>
+<head>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="container">
+    <header class="header">
+      <h1 id="title">freeCodeCamp Survey Form</h1>
+      <p id="description">Thank you for taking the time to help us improve the platform</p>
+    </header>
+    <form id="survey-form">
+      <div class="form-group">
+        <label for="name" id="name-label">Name:</label>
+        <input type="text" id="name" class="form-control" placeholder="Enter your name" required/>
+      </div>
+      <div class="form-group">
+        <label for="email" id="email-label">Email:</label>
+        <input type="email" id="email" class="form-control" placeholder="Enter your email" required/>
+      </div>
+      <div class="form-group">
+        <label for="number" id="number-label">Age:</label>
+        <input type="number" id="number" class="form-control" placeholder="Enter your age" min="18" max="120" required/>
+      </div>
+      <div class="form-group">
+        <label for="role">Which option best describes your current role?</label>
+        <select id="dropdown" class="form-control">
+          <option disabled selected>Select current role</option>
+          <option>Student</option>
+          <option>Full Time Job</option>
+          <option>Full Time Learner</option>
+          <option>Prefer not to say</option>
+          <option>Other</option>
+        </select>
+      </div>
 
-        <div class="form-group">
-          <p>Would you recommend freeCodeCamp to a friend?</p>
+      <div class="form-group">
+        <p>Would you recommend freeCodeCamp to a friend?</p>
+        <div class="radio-group">
           <label>
-            <input/>Definitely</label>
-          <label>
-            <input/>Maybe</label>
-
-          <label>
-            <input/>Not sure</label>
-        </div>
-
-        <div class="form-group">
-          <p>What is your favorite feature of freeCodeCamp?</p>
-          <select>
-            <option>Select an option</option>
-            <option>Challenges</option>
-            <option>Projects</option>
-            <option>Community</option>
-            <option>Open Source</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <p> What would you like to see improved?
-           (Check all that apply)
-          </p>
+            <input type="radio" name="recommendation" value="definitely"/> Definitely
+          </label>
 
           <label>
-            <input/>Front-end Projects
-            </label>
-          <label>
-            <input/>Back-end Projects
-            </label>
-          <label>
-            <input/>Data Visualization
-            </label>
-          <label>
-            <input/>Challenges
-            </label>
-          <label>
-            <input/>Open Source Community
-            </label>
-          <label>
-            <input/>Gitter help rooms
-            </label>
-          <label>
-            <input/>Videos
-            </label>
-          <label>
-            <input/>City Meetups
-            </label>
-          <label>
-            <input/>Wiki
-            </label>
-          <label>
-            <input/>Forum
-            </label>
-          <label>
-            <input/>Additional Courses
-            </label>
-        </div>
+            <input type="radio" name="recommendation" value="maybe"/> Maybe
+          </label>
 
-        <div class="form-group">
-          <p>Any comments or suggestions?</p>
-          <textarea></textarea>
+          <label>
+            <input type="radio" name="recommendation" value="not_sure"/> Not sure
+          </label>
         </div>
+      </div>
 
-        <div class="form-group">
-          <button>
-            Submit
-          </button>
+      <div class="form-group">
+        <label for="favorite-feature">What is your favorite feature of freeCodeCamp?</label>
+        <select id="favorite-feature" class="form-control">
+          <option>Select an option</option>
+          <option>Challenges</option>
+          <option>Projects</option>
+          <option>Community</option>
+          <option>Open Source</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <p> What would you like to see improved? (Check all that apply) </p>
+
+        <div class="checkbox-group">
+          <label>
+            <input type="checkbox" name="improvement" value="front_end_projects"/> Front-end Projects
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="back_end_projects"/> Back-end Projects
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="data_visualization"/> Data Visualization
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="challenges"/> Challenges
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="open_source_community"/> Open Source Community
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="gitter_help_rooms"/> Gitter Help Rooms
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="videos"/> Videos
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="city_meetups"/> City Meetups
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="wiki"/> Wiki
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="forum"/> Forum
+          </label>
+          <label>
+            <input type="checkbox" name="improvement" value="additional_courses"/> Additional Courses
+          </label>
         </div>
-      </form>
-    </div>
-  </body>
+      </div>
+
+      <div class="form-group">
+        <label for="comments">Any comments or suggestions?</label>
+        <textarea id="comments" class="form-control"></textarea>
+      </div>
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary" id="submit">
+          Submit
+        </button>
+      </div>
+    </form>
+  </div>
+</body>
 </html>
