--- a/form.html
+++ b/form.html
@@ -19,8 +19,8 @@
         <input type="email" id="email" class="form-control" placeholder="Enter your email" required/>
       </div>
       <div class="form-group">
-        <label for="number" id="number-label">Age:</label>
-        <input type="number" id="number" class="form-control" placeholder="Enter your age" min="18" max="120" required/>
+        <label for="number" id="number-label">Age: <span class="optional">(optional)</label>
+        <input type="number" id="number" class="form-control" placeholder="Enter your age" min="18" max="120"/>
       </div>
       <div class="form-group">
         <label for="role">Which option best describes your current role?</label>
