--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
   <div class="container">
     <header class="header">
       <h1 id="title">freeCodeCamp Survey Form</h1>
-      <p id="description">Thank you for taking the time to help us improve the platform</p>
+      <p id="description" style="text-align: center;">Thank you for taking the time to help us improve the platform</p>
     </header>
     <form id="survey-form">
       <div class="form-group">
@@ -63,7 +63,7 @@
       </div>
 
       <div class="form-group">
-        <p> What would you like to see improved? (Check all that apply) </p>
+        <p> What would you like to see improved?<span class="optional">(Check all that apply)</span></p>
 
         <div class="checkbox-group">
           <label>
