Brought some of the changes Linters was suggesting.

--- a/form.html
+++ b/form.html
@@ -1,13 +1,17 @@
+
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Survey Form</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <header class="header">
       <h1 id="title">freeCodeCamp Survey Form</h1>
-      <p id="description" style="text-align: center;">Thank you for taking the time to help us improve the platform</p>
+      <p id="description" class="center">Thank you for taking the time to help us improve the platform</p>
     </header>
     <form id="survey-form">
       <div class="form-group">
